# siapy-lib

./: .codespellrc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.debug.yml  docker-compose.yml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  random_build.txt  random_ci.txt  random_docs.txt  random_fix.txt  random_perf.txt  random_refactor.txt  random_style.txt  random_test.txt  requirements.txt  run.sh  setup.py  siapy-dev.code-workspace  sitemap.xml  versions.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: codeql.yml  codespell.yml  docs.yml  gitleaks.yml  issue-manager.yml  labeler.yml  publish-and-deploy.yml  publish.yml  release-please.yml  smokeshow.yml  stale.yml  test.yml
0.7.0/: 404.html  index.html
0.7.0/changelog/: index.html
0.7.0/install/: index.html
0.7.0/search/: search_index.json
0.7.1/: objects.inv  sitemap.xml
0.7.1/changelog/: index.html
0.7.1/search/: search_index.json
0.7.2/: objects.inv  sitemap.xml
0.7.2/changelog/: index.html
0.7.2/contributing/: index.html
0.7.2/permit/: index.html
0.7.2/search/: search_index.json
0.8.0/: index.html  objects.inv  sitemap.xml
0.8.0/changelog/: index.html
0.8.0/install/: index.html
0.8.0/search/: search_index.json
0.8.1/: 404.html  index.html  objects.inv  sitemap.xml
0.8.1/changelog/: index.html
0.8.1/contributing/: index.html
0.8.1/permit/: index.html
0.8.1/search/: search_index.json
0.9.0/: 404.html  index.html  objects.inv  sitemap.xml
0.9.0/changelog/: index.html
0.9.0/contributing/: index.html
0.9.0/install/: index.html
0.9.0/permit/: index.html
0.9.0/search/: search_index.json
0.9.1/: 404.html  index.html  sitemap.xml
0.9.1/changelog/: index.html
0.9.1/contributing/: index.html
0.9.1/install/: index.html
0.9.1/permit/: index.html
0.9.1/search/: search_index.json
0.9.2/: index.html  sitemap.xml
0.9.2/changelog/: index.html
0.9.2/contributing/: index.html
0.9.2/search/: search_index.json
0.9.3/: objects.inv  sitemap.xml
0.9.3/changelog/: index.html
0.9.3/contributing/: index.html
0.9.3/install/: index.html
0.9.3/permit/: index.html
0.9.3/search/: search_index.json
0.9.4/: 404.html  sitemap.xml
0.9.4/changelog/: index.html
0.9.4/contributing/: index.html
0.9.4/search/: search_index.json
0.9.5/: 404.html  index.html  sitemap.xml
0.9.5/changelog/: index.html
0.9.5/contributing/: index.html
0.9.5/install/: index.html
0.9.5/permit/: index.html
0.9.5/search/: search_index.json
0.9.6/: 404.html  index.html  sitemap.xml
0.9.6/changelog/: index.html
0.9.6/contributing/: index.html
0.9.6/install/: index.html
0.9.6/permit/: index.html
0.9.6/search/: search_index.json
0.9.7/: 404.html  index.html  objects.inv  sitemap.xml
0.9.7/changelog/: index.html
0.9.7/contributing/: index.html
0.9.7/install/: index.html
0.9.7/permit/: index.html
0.9.7/search/: search_index.json
_old/: perform_segmentation.py  show_image.py
_old/checker/: check_images.py  check_slices.py
_old/preparator/: preparator.py
_old/segmentator/: __init__.py  base_decision_algo.py  decision_algos.py
changelog/: index.html
configs/: config.yaml  custom.yaml  custom_config.yaml
configs/base/: camera.yaml  data_loader.yaml  preparator.yaml  segmentator.yaml  selector.yaml  visualiser.yaml
configs/camera1/: camera_nir.yaml
configs/camera2/: camera_swir.yaml
configs/cameras/: base_camera.yaml  camera_nir.yaml  camera_swir.yaml
configs/data_loader/: data_loader.yaml
configs/data_loaders/: base_data_loader.yaml  data_loader.yaml
configs/misc/: segmentator.yaml  selector.yaml
configs/preparator/: preparator.yaml
configs/preparators/: preparator.yaml
configs/segmentator/: segmentator.yaml
configs/selector/: selector.yaml
configs/visualiser/: visualiser.yaml
contributing/: index.html
corregistrator/: corregistrator.py
data_loader/: data_loader.py  sp_image.py
docs/: app_use.md  changelog.md  contributing.md  index.md  install.md  license.md  permit.md  setup_guide.md
docs/api/: entity.md
docs/concepts/: datasets.md  entities.md  features.md  optimizers.md  overview.md  transformations.md  utils_image.md  utils_plotting.md
docs/examples/: case_study.md  external_sources.md  introduction.md  overview.md  spectral_image.md  spectral_imageset.md  transformations.md  use_cases.md  visualization.md
examples/introduction/: index.html
examples/spectral_image/: index.html
examples/spectral_imageset/: index.html
examples/src/: spectral_imageset_load_01.py  transformations_02.py  transformations_03.py  visualization_01.py
examples/transformations/: index.html
initializer/: cameras_corregistration.py
install/: index.html
permit/: index.html
preparator/: preparator.py
program_data/: readme.md
scripts/: __init__.py  check_images.py  clean.sh  compress-data.sh  corregistrate.py  create_signatures.py  docker_build.sh  docker_run.sh  format.sh  install-dev.sh  lint.sh  perform_segmentation.py  prepare_data.py  select_signatures.py  show_image.py  test.sh  test_segmentation.py  update-branches.sh  visualise_signatures.py
search/: search_index.json
segmentator/: base_decision_algo.py  decision_algos.py  formulas.pyx  segmentator.py
siapy/: __docs__.py  __init__.py  __print__.py  __version__.py  check_images.py  corregistrate.py  create_signatures.py  perform_segmentation.py  prepare_data.py  select_signatures.py  show_image.py  test_segmentation.py  visualise_signatures.py
structure/: __docs__.py  __init__.py  checkers.py  config_structure.py
tests/: __init__.py  configs.py  conftest.py  data_manager.py  data_maneger.py  fixtures.py  test_clf_decision_boundary.py  test_hydra.py  utils.py
tutorials/: use_case.ipynb
utils/: checkers.py  image_utils.py  plot_utils.py  signature_utils.py  utils.py
(+581 files in other folders)
