[project]
name = "siapy"
version = "0.4.2"
description = "A python library for efficient processing of spectral images."
authors = [{ name = "janezlapajne", email = "janez.lapajne@kis.si" }]

classifiers = [
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.2.2",
    "opencv-python>=4.10.0.82",
    "spectral>=0.23.1",
    "scikit-learn>=1.5.0",
    "pydantic>=2.7.3",
    "rich>=13.7.1",
    "scikit-image>=0.24.0",
    "matplotlib>=3.9.0",
    "optuna>=3.6.1",
    "spyndex>=0.6.0",
    "mlxtend>=0.23.1",
    "autofeat>=2.1.1",
    "setuptools>=72.1.0",
    "dask[dataframe]>=2024.7.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/siapy/siapy-lib"
Documentation = "https://github.com/siapy/siapy-lib/tree/main/docs"
Repository = "https://github.com/siapy/siapy-lib"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
source-includes = ["tests/", "scripts/", "docs/"]

[tool.pdm.dev-dependencies]
lint = [
    "black>=24.4.2",
    "flake8>=7.0.0",
    "ruff>=0.4.8",
    "mypy>=1.10.1",
    "pandas-stubs>=2.2.2.240603",
]
dev = ["pre-commit>=3.7.1", "tomli>=2.0.1", "codespell>=2.3.0"]
test = ["pytest>=8.2.2", "pytest-cov>=5.0.0", "pytest-xdist>=3.6.1"]
docs = ["mkdocs>=1.6.0"]

[tool.pytest.ini_options]
markers = ["manual: mark test as manual to run them only on demand."]

[tool.mypy]
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = "spectral"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[tool.flake8]
ignore = "E302, E305, E203, E501, W503, E501"
select = "C,E,F,W,B,B950"
max-line-length = 100
exclude = [".git", "__pycache__", "__init__.py", ".mypy_cache", ".pytest_cache"]
per-file-ignores = ["tests/*:F401,F811"]

[tool.ruff]
extend-exclude = []
exclude = []
lint.ignore = ["F811"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.codespell]
ignore-words-list = "janezlapajne"
skip = 'dist/*, ./_old, docs, htmlcov, LICENCE, *.lock, requirements.txt, *.toml, CHANGELOG.md, *.cff'
count = true
check-hidden = false
