[project]
name = "siapy"
version = "0.5.7"
description = "A python library for efficient processing of spectral images."
authors = [{ name = "janezlapajne", email = "janez.lapajne@kis.si" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

classifiers = [
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.2.2",
    "opencv-python>=4.10.0.82",
    "spectral>=0.23.1",
    "scikit-learn>=1.5.0",
    "pydantic>=2.7.3",
    "rich>=13.7.1",
    "scikit-image>=0.24.0",
    "matplotlib>=3.9.0",
    "optuna>=3.6.1",
    "spyndex>=0.6.0",
    "mlxtend>=0.23.1",
    "autofeat>=2.1.1",
    "setuptools>=72.1.0",
    "dask[dataframe]>=2024.7.1",
]

[dependency-groups]
lint = [
    "black>=24.4.2",
    "flake8>=7.0.0",
    "ruff>=0.4.8",
    "mypy>=1.10.1",
    "pandas-stubs>=2.2.2.240603",
]
dev = ["pre-commit>=3.7.1", "tomli>=2.0.1", "codespell>=2.3.0"]
test = ["pytest>=8.2.2", "pytest-cov>=5.0.0", "pytest-xdist>=3.6.1"]
docs = [
    "autoflake>=2.3.1",
    "mkdocs>=1.6.0",
    "mkdocs-embed-external-markdown>=3.0.2",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-material>=9.5.31",
    "mkdocs-simple-hooks>=0.1.5",
    "mkdocstrings-python>=1.10.8",
    "mkdocs-redirects>=1.2.1",
    "griffe-typingdoc>=0.2.6",
    "mike>=2.1.3",
    "pymdown-extensions>=10.12",
]

[project.urls]
Homepage = "https://github.com/siapy/siapy-lib"
Documentation = "https://github.com/siapy/siapy-lib/tree/main/docs"
Repository = "https://github.com/siapy/siapy-lib"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
source-includes = ["tests/", "scripts/", "docs/"]

[tool.pytest.ini_options]
markers = ["manual: mark test as manual to run them only on demand."]

[tool.mypy]
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = "spectral"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[tool.flake8]
ignore = "E302, E305, E203, E501, W503, E501"
select = "C,E,F,W,B,B950"
max-line-length = 100
exclude = [".git", "__pycache__", "__init__.py", ".mypy_cache", ".pytest_cache"]
per-file-ignores = ["tests/*:F401,F811"]

[tool.ruff]
extend-exclude = []
exclude = []
lint.ignore = ["F811"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.codespell]
ignore-words-list = "janezlapajne"
skip = 'dist/*, ./docs/images/*, htmlcov, LICENCE, *.lock, *.toml, CHANGELOG.md, *.cff'
count = true
check-hidden = false
